--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
     "prestart": "babel-node buildScripts/startMessage.js",
-    "start" : "npm-run-all --parallel open:src lint:watch test:watch",
-    "open:src":"babel-node buildScripts/srcServer.js",
+    "start": "npm-run-all --parallel open:src lint:watch test:watch start-mockapi",
+    "open:src": "babel-node buildScripts/srcServer.js",
     "lint": "esw webpack.config.* src buildScripts --color",
-    "lint:watch":"npm run lint -- --watch",
+    "lint:watch": "npm run lint -- --watch",
     "security-check": "nsp check",
-    "localtunnel":"lt -h 'http://serverless.social' -p 3000  --subdomain js",
+    "localtunnel": "lt -h 'http://serverless.social' -p 3000  --subdomain js",
     "share": "npm-run-all --parallel open:src localtunnel",
-    "test":"mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
-    "test:watch": "npm run test -- --watch"
+    "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
+    "test:watch": "npm run test -- --watch",
+    "generate-mock-data": "babel-node buildScripts/generateMockData.js",
+    "prerestart-mockapi": "npm run generate-mock-data",
+    "start-mockapi":"json-server --watch src/api/db.json --port 3001"
   },
   "author": "Cory House",
   "license": "MIT",
@@ -30,27 +33,27 @@
     "cheerio": "0.22.0",
     "compression": "^1.7.4",
     "cross-env": "3.1.3",
-    "css-loader": "0.25.0",
+    "css-loader": "^4.2.2",
     "eslint": "3.8.1",
     "eslint-plugin-import": "^2.22.0",
-    "eslint-watch": "2.1.14",
+    "eslint-watch": "^7.0.0",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "1.0.1",
-    "html-webpack-plugin": "2.22.0",
+    "html-webpack-plugin": "^4.3.0",
     "jsdom": "9.8.0",
     "json-schema-faker": "^0.4.7",
     "json-server": "^0.16.1",
-    "localtunnel": "1.8.1",
-    "mocha": "3.1.2",
-    "nock": "8.1.0",
+    "localtunnel": "^2.0.0",
+    "mocha": "^8.1.2",
+    "nock": "^13.0.4",
     "npm-run-all": "3.1.1",
     "nsp": "2.6.2",
     "numeral": "1.5.3",
-    "open": "0.0.5",
+    "open": "^7.2.0",
     "rimraf": "2.5.4",
     "style-loader": "0.13.1",
     "surge": "^0.21.6",
-    "webpack": "1.13.2",
+    "webpack": "^4.44.1",
     "webpack-dev-middleware": "1.8.4",
     "webpack-hot-middleware": "2.13.0",
     "webpack-md5-hash": "0.0.5"
