--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "esw webpack.config.* src buildScripts --color",
     "lint:watch": "npm run lint -- --watch",
     "security-check": "nsp check",
-    "localtunnel": "lt -h 'http://serverless.social' -p 3000  --subdomain js",
+    "localtunnel": "lt --port 3000",
     "share": "npm-run-all --parallel open:src localtunnel",
     "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch",
-    "generate-mock-data": "babel-node buildScripts/generateMockData.js",
-    "prerestart-mockapi": "npm run generate-mock-data",
-    "start-mockapi": "json-server --watch src/api/db.json --port 3001"
+    "generate-mock-data": "babel-node buildScripts/generateMockData",
+    "prestart-mockapi": "npm run generate-mock-data",
+    "start-mockapi": "json-server --watch src/api/db.json --port 3001",
+    "clean-dist": "rimraf ./dist && mkdir dist",
+    "prebuild": "npm-run-all clean-dist test lint",
+    "build": "babel-node buildScripts/build.js",
+    "postbuild": "babel-node buildScripts/distServer.js"
   },
   "author": "Cory House",
   "license": "MIT",
@@ -50,7 +54,7 @@
     "nsp": "2.6.2",
     "numeral": "1.5.3",
     "open": "0.0.5",
-    "rimraf": "2.5.4",
+    "rimraf": "^2.5.4",
     "style-loader": "0.13.1",
     "surge": "0.20.4",
     "webpack": "1.13.2",
