--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "nsp": "2.6.2",
     "numeral": "1.5.3",
     "open": "0.0.5",
-    "rimraf": "^2.5.4",
+    "rimraf": "2.5.4",
     "style-loader": "0.13.1",
     "surge": "0.20.4",
     "webpack": "1.13.2",
